# procedural_generation

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  test.c
include/: callbacks.h  error.h  init.h  save.h  shaders.h  shaders_preprocessing.h  structs.h  utils_macro.h  vec.h
shaders/: fragment_canopy.glsl  fragment_mandelbrot.glsl  fragment_postprocessing.frag  fragment_postprocessing.glsl  vertex.glsl  vertex_postprocessing.glsl
shaders/effects/: dithering.glsl  quantization.glsl
shaders/utils/: color_space.glsl  edge_detection.glsl
source/: callbacks.c  error.c  init.c  save.c  shaders.c  shaders_preprocessing.c
stb/source/: stb_image.c
